--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 51;
+  z-index: 9;
 }
 
 .menu {
@@ -16,7 +16,7 @@
   max-width: 2000px;
   transition: transform 0.4s ease;
   will-change: transform;
-  z-index: 100;
+  z-index: 10;
 }
 
 .menu.hidden {
